upcxx-2023.9.0/test/neg/neg-rpc14.errc
rpc return value must be either an lvalue reference or MoveConstructible.
